[package]
name = "canalyzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
crossterm = "0.27.0"
ratatui = "0.25.0"
serde = {version = "1.0.192", features = ["derive"]}
serde_json = "1.0.108"
serde_with = "3.4.0"
